--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 # MySQL Database Configuration
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/loandb
+spring.datasource.url=jdbc:mysql://localhost:3306/loan
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=Password
+spring.rabbitmq.addresses=localhost:5672
 
 # Hibernate Configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
